
OPTION(BUILD_WITH_SDL_WINDOW "Use SDL for window mangement." ON)
#OPTION(BUILD_WITH_TASK_SCHEDULER_SCHTASK ON)

OPTION(BUILTIN_NANOSVG "Build with nanosvg" ON)
OPTION(BUILTIN_EIGEN "Build with Eigne" ON)
OPTION(BUILTIN_OPEN_SIMPLEX_NOISE "Build with open Simple Noise" ON)
OPTION(BUILTIN_XATLAS "Build with Xatlas" ON)
OPTION(BUILTIN_PCG_C_BASIC "Build with PCG-C Basic" ON)
OPTION(BUILTIN_RECASTNAVIGATION "Build with " ON)
OPTION(BUILTIN_POLYPARITION "" ON)
OPTION(BUILTIN_KISS_FFT "" ON)
OPTION(BUILTIN_MISC "" ON)

SET(THIRDPARTY_INCLUDE_DIR "" PARENT_SCOPE)
SET(THIRDPARTY_SOURCE "" PARENT_SCOPE)

IF(BUILTIN_NANOSVG)
	SET(NANOSVG_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/nanosvg PARENT_SCOPE)

	SET(THIRDPARTY_INCLUDE_DIR "${THIRDPARTY_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/extern/nanosvg")
	FILE(GLOB NANOSVG_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/nanosvg/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/nanosvg/*.cc)

	SET(THIRDPARTY_SOURCE "${THIRDPARTY_SOURCE};${NANOSVG_SOURCE}")
ENDIF()

IF( BUILTIN_EIGEN)
	SET(EIGEN_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/extern/eigen/Eigen)

ENDIF()

IF(BUILTIN_OPEN_SIMPLEX_NOISE )
	SET(OPEN_SIMPLEX_NOISE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/open-simplex-noise-in-c)

	FILE(GLOB OPEN_SIMPLEX_NOISE_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/open-simplex-noise-in-c/*.c )
ENDIF()
IF(BUILTIN_XATLAS )
	SET(XATLAS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/xatlas)

	FILE(GLOB XATLAS_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/xatlas/*.h
							${CMAKE_CURRENT_SOURCE_DIR}/../extern/xatlas/*.cpp )

ENDIF()

IF(BUILTIN_PCG_C_BASIC)
	SET(PCG_C_BASIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/pcg-c-basic)

	FILE(GLOB PCG_C_BASIC_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/pcg-c-basic/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/pcg-c-basic/*.c )

ENDIF()

IF(BUILTIN_RECASTNAVIGATION)
	SET(RECASTNAVIGATION_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/recastnavigation/Include)

	FILE(GLOB RECASTNAVIGATION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/recastnavigation/Include/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/recastnavigation/Source/*.cpp )

	SET(THIRDPARTY_SOURCE "${THIRDPARTY_SOURCE};${RECASTNAVIGATION_SOURCE}")
ENDIF()

IF(BUILTIN_POLYPARITION)
	SET(POLYPARITION_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/polypartition)
	FILE(GLOB POLYPARITION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/polypartition/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/polypartition/*.cpp)
ENDIF()

IF(BUILTIN_KISS_FFT)
	#https://github.com/mborgerding/kissfft.git
	SET(KISS_FFT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/kissfft )

	FILE(GLOB KISS_FFT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/kissfft/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/kissfft/*.c)
ENDIF()

IF(BUILTIN_MISC)
	SET(MISC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../extern/misc)
	FILE(GLOB MISC_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/../extern/misc/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/misc/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/../extern/misc/*.cpp)
ENDIF()

# Find all required libaries for the program.
FIND_PACKAGE(ZLIB QUIET)
FIND_PACKAGE(Backtrace QUIET)
FIND_PACKAGE(OpenSSL QUIET)

#
IF(PKG_CONFIG_FOUND)
	MESSAGE(STATUS "Found pkg-config: ${PKG_CONFIG_EXECUTABLE} -- version ${PKG_CONFIG_VERSION_STRING}.")
	# Find library and compiling options.
	#TODO add logic for handling if any of the pkg fails.
	PKG_CHECK_MODULES(JSONC QUIET json-c)
	PKG_CHECK_MODULES(ZIP QUIET libzip)
ELSE()
	MESSAGE(ERROR "")
	# TODO add logic for handling if pkg-config not available.
ENDIF()

IF(ZLIB_FOUND)
	MESSAGE(STATUS "zlib found: ${ZLIB_LIBRARIES} -- ${ZLIB_VERSION_STRING}")
ELSE()

ENDIF()

IF(Backtrace_FOUND)
	MESSAGE(STATUS "backtrace found: ${Backtrace_LIBRARIES} -- ${Backtrace_HEADER}")
ELSE()

ENDIF()

IF(OPENSSL_FOUND)
	MESSAGE(STATUS "OpenSSL found: ${OPENSSL_LIBRARIES} -- ${OPENSSL_VERSION}")
ELSE()

ENDIF()

#
FIND_PACKAGE(Freetype QUIET)
IF(FREETYPE_FOUND)
	MESSAGE(STATUS "Using freetype version ${FREETYPE_VERSION_STRING}.")
ELSE()
	# Attempt to find it manually.
ENDIF()

# Find and include libxml2 for supporting configuration.
FIND_PACKAGE(LibXml2 QUIET)
IF ( LIBXML2_FOUND )
	MESSAGE(STATUS "Using xml2 version ${LIBXML2_VERSION_STRING}.")
ELSE()
ENDIF()

FIND_PACKAGE(JeMalloc QUIET)
IF(JeMalloc_FOUND)

ENDIF()

FIND_PACKAGE(LZO QUIET)
IF(LZO_FOUND)

ENDIF()

FIND_PACKAGE(Eigen3 3.3 NO_MODULE QUIET)
IF(EIGEN3_FOUND)
	MESSAGE(STATUS "Using eigen3 version .")
ENDIF()

# Define all file lists.
FILE(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/utils/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/io/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/network/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/core/Scheduler/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/window/*.cpp
		)

#
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
						${CMAKE_CURRENT_SOURCE_DIR}/include/Utils/*.h)

# Public headers - subset of header files.
FILE(GLOB DEVELOPMENT_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Core/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Core/IO/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Window/*.h
									${CMAKE_CURRENT_SOURCE_DIR}/include/Utils/*.h)

SET(FRAG_CORE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(FRAG_CORE_INCLUDE_SUB_DIR
				${CMAKE_CURRENT_SOURCE_DIR}/include/
				${CMAKE_CURRENT_SOURCE_DIR}/include/Core
				${CMAKE_CURRENT_SOURCE_DIR}/include/Utils
				${CMAKE_CURRENT_SOURCE_DIR}/include/Window)


# Core library for adding support for plugin.
ADD_LIBRARY(fragcore ${SOURCE_FILES} ${HEADER_FILES}
 							${OPEN_SIMPLEX_NOISE_SOURCE} ${PCG_C_BASIC_SOURCE}
							${RECASTNAVIGATION_SOURCE} ${POLYPARITION_SOURCE} ${KISS_FFT_SOURCE}
							${MISC_SOURCE})
ADD_DEPENDENCIES(fragcore taskSch infoware cxxexcept)

#
TARGET_COMPILE_DEFINITIONS(fragcore PRIVATE FRAG_CORE_INTERNAL_IMP=1)
TARGET_COMPILE_FEATURES(fragcore PUBLIC cxx_std_17 cxx_constexpr)

#
SET_TARGET_PROPERTIES(fragcore PROPERTIES
		COMPILE_FLAGS "${JSONC_CFLAGS_OTHER} ${ZIP_CFLAGS_OTHER}")

#
TARGET_LINK_LIBRARIES(fragcore PUBLIC Eigen3::Eigen taskSch cxxexcept fmt PRIVATE dl  ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES} ${FREETYPE_LIBRARIES}
		${ZIP_LIBRARIES} m dl ${JSONC_LIBRARIES} yaml ${OPENSSL_CRYPTO_LIBRARY} infoware spdlog )

#
TARGET_INCLUDE_DIRECTORIES(fragcore PRIVATE ${ZIP_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR}
													 ${NANOSVG_INCLUDE_DIRS} ${RECASTNAVIGATION_INCLUDE_DIRS}
													 ${OPEN_SIMPLEX_NOISE_INCLUDE_DIRS} ${PCG_C_BASIC_INCLUDE_DIRS} ${XATLAS_INCLUDE_DIRS}
													 ${KISS_FFT_INCLUDE_DIRS} ${MISC_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
													 ${ZLIB_INCLUDE_DIRS} ${ZSTD_INCLUDE_DIRS}
													 ${Backtrace_HEADER}
													 ${CMAKE_CURRENT_SOURCE_DIR}/../extern/infoware/include/infoware
										PUBLIC
											$<BUILD_INTERFACE:${FRAG_CORE_INCLUDE}>
											$<INSTALL_INTERFACE:${FRAG_CORE_INCLUDE}>
)

# Create package information
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/fragcore.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/fragcore.pc" @ONLY)
# Generate revision for up to date header with version and etc.
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/include/fragcore_revision.h.in" "${CMAKE_CURRENT_BINARY_DIR}/include/fragcore_revision.h" @ONLY)

IF(BUILD_WITH_INSTALL)
	INSTALL(TARGETS fragcore DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})

	INSTALL(DIRECTORY ${FRAG_CORE_INCLUDE_SUB_DIR} # source directory
			DESTINATION include/fragcore # target directory
			COMPONENT ${LIBFRAGCORE-DEV_COMPONENT}
			)
	INSTALL( FILES "${CMAKE_CURRENT_BINARY_DIR}/fragcore.pc" DESTINATION ${FRAGCORE_LIB_INSTALL_DIR}/pkgconfig/ COMPONENT ${LIBFRAGCORE-DEV_COMPONENT})
ENDIF()
