FILE(GLOB AUDIO_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
			${CMAKE_CURRENT_SOURCE_DIR}/decoder/*.cpp)
FILE(GLOB AUDIO_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h
			${CMAKE_CURRENT_SOURCE_DIR}/decoder/*.h)

# Library target.
ADD_LIBRARY(fragcore-audio-interface SHARED ${AUDIO_SOURCE_FILES} ${AUDIO_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-audio-interface PUBLIC fragcore vorbis ogg vorbisfile )
TARGET_COMPILE_DEFINITIONS(fragcore-audio-interface PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
TARGET_INCLUDE_DIRECTORIES(fragcore-audio-interface PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

ADD_DEPENDENCIES(fragcore-audio-interface fragcore )

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8) # -fPIC is only required
	SET_PROPERTY(TARGET fragcore-audio-interface PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-audio-interface DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()

